--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "devDependencies": {
     "@types/jest": "^26.0.23",
+    "@types/mongoose": "^5.10.5",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
@@ -24,7 +25,9 @@
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   },
-  "dependencies": {},
+  "dependencies": {
+    "mongoose": "^5.12.6"
+  },
   "peerDependencies": {},
   "scripts": {
     "build": "tsc",
